discussion/kv_engine/176364/176364_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52264: Add BucketQuotaChangeTask to deal with quota changes

The task is created on Bucket creation and snoozed indefinitely.
When a quota change comes in via epctl flush param we wake the task
and have it change the Bucket quota. Currently this change in quota
sets the configuration parameter which updates watermarks and other
related quotas in a configuration listener. This code will be moved
into this task in a future change. In another change we will also
handle decreases in quota in a graceful manner with the goal of
preventing tmp fails as we reduce memory usage.

Change-Id: Ia43dda9fea8eab2547f9fafacf28d911b90c943c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-06-24 12:05:47.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-24 13:07:45.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47044/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [2/47]: test max_size - water_mark changes.....\kv_engine\engines\ep\tests\ep_testsuite_basic.cc:152 Test failed: `" (Expected `500", got `50" - Incorrect low wat.)
(91 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47044/ )

Failure of GoogleTest "ServerlessTest.AllConnectionsAreMetered":

<pre>
[ RUN      ] ServerlessTest.AllConnectionsAreMetered
C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp_serverless/serverless_test.cc(334): error: Expected equality of these values:
  initial["num_commands"].get<std::size_t>() + 2
    Which is: 4222
  after["num_commands"].get<std::size_t>()
    Which is: 4223
[  FAILED  ] ServerlessTest.AllConnectionsAreMetered (8 ms)
ServerlessTest.AllConnectionsAreMetered
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47044/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18296/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43: error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
                     /*initialSleepTime*/ INT_MAX,
                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18296/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18296/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39515/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39515/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7966/ : FAILURE

Compile error at [2022-06-24T12:13:58.135Z] ../kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7966/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19383/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [76/160]: disk>RAM delete paged-out...../kv_engine/engines/ep/tests/ep_testsuite.cc:4372 Test failed: `" (Expected `0", got `1" - Unexpected bg_fetched after del/get)
[2022-06-24T12:24:32.516Z] (194 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19383/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20167/ : FAILURE

Compile error at [2022-06-24T12:35:59.161Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:17:10:
fatal error: libmagma/magma.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20167/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17422/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20513/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28544/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8067/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21161/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
